manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zoomoid-de
spec:
  selector: {}
  template:
    spec:
      securityContext:
        runAsGroup: 1000
        runAsUser: 1001
        runAsNonRoot: true
      containers:
        - name: zoomoid-de
          image: ghcr.io/zoomoid/zoomoid-de:latest
          securityContext:
            runAsGroup: 1000
            runAsUser: 1001
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
              name: http
          livenessProbe:
            httpGet:
              port: http
              path: /
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              port: http
              path: /
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 3
