manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zoomoid-de
spec:
  selector: {}
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
